fix recent post

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,10 +1,18 @@
-
 <!DOCTYPE html>
 <html>
 {{ partial "header.html" . }}
 <body>
 	<div class="container wrapper">
 		{{ partial "head.html" . }}
+
+		<div class="home-content section">	
+			<h2>	A personal website		</h2>
+			<p>	
+			Some kind of a portofolio populated with all sort of things.
+			</p>
+		</div>
+
+		<hr>
 
 		<div class="recent-posts section">
 			<h2 class="section-header">
