--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,4 +1,11 @@
 <div class="header">
+	{{ if .Site.Params.Avatar }}
+		<div class="avatar">
+			<a href="{{ .Site.BaseURL }}">
+				<img src="{{ .Site.BaseURL }}icons/bolin.jpg" alt="{{ .Site.Title }}" />
+			</a>
+		</div>
+	{{ end }}
 	<h1 class="site-title"><a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></h1>
 	<div class="site-description">
 		{{- if isset .Site.Params "subtitle" -}}
