--- a/themes/ezhil/layouts/_default/list.html
+++ b/themes/ezhil/layouts/_default/list.html
@@ -9,7 +9,7 @@
 		{{ if isset .Data "Term" }}
 			<h1>Entries tagged - "{{ .Data.Term }}"</h1>
 		{{ else }}
-			<h1 class="page-title">All articles</h1>
+			<h1 class="page-title">Articles</h1>
 		{{ end }}
 
 		<ul class="posts">
